added submodule jquery plugin easy-ticker

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/jquery/plugin/jquery-hurl"]
 	path = vendor/jquery/plugin/jquery-hurl
 	url = git://github.com/makesites/jquery-hurl.git
+[submodule "vendor/jquery/plugin/jquery-easy-ticker"]
+	path = vendor/jquery/plugin/jquery-easy-ticker
+	url = git://github.com/vaakash/jquery-easy-ticker.git
