--- a/python.d/framework.d/django.d/compose.yml
+++ b/python.d/framework.d/django.d/compose.yml
@@ -4,6 +4,15 @@ services:
       context: .
       dockerfile: django.Docker
     command: uv run python manage.py runserver 0.0.0.0:8000
+    environment:
+      DEBUG: ${DEBUG}
+      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
+      DJANGO_LOGLEVEL: ${DJANGO_LOGLEVEL}
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
+      # This is the section where you can add
+      #   database related configuration too
+    env_file:
+      - .env
     volumes:
       - .:/app
     ports:
